Fix overflow-x

--- a/src/main/frontend/pipeline-graph-view/pipeline-graph/styles/main.scss
+++ b/src/main/frontend/pipeline-graph-view/pipeline-graph/styles/main.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: auto;
 
   * {
     box-sizing: border-box;
